2007-11-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs: Track LogLevel enum split.
	* MonoDevelop.Ide.Gui/InternalLog.cs: Track LogLevel enum split. Override
	  GetHashcode to suppress warning. Use environment variable to set logging
	  level.

2007-11-13  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Ide.Gui/AbstractViewContent.cs: Fix for Bug #338594 - MD title
	  does not display first 2 characters of any source file.

2007-11-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs,
	  MonoDevelop.Ide.Gui.Search/SearchReplaceInFilesManager.cs: Fixed "Bug
	  325408 - 'Stop' button is never insensitive".

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectSolutionPad.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Added property for getting the
	  current selected item in the project solution.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: In the
	  Include Folder to Project command, don't include hidden subfolders.
	  Fixes bug #339444.

2007-11-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Removed some unneeded
	  shadows.
	* MonoDevelop.Ide.Gui.Pads/FileListItem.cs: Make file and folder icons
	  smaller.
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Use new ContentRequired event
	  to lazily create the pads. Track api changes.
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Run refactoring operations
	  in an atomic undo change.

2007-11-09  Zach Lute  <zach.lute@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Select the search
	  pattern in the ReplaceInFilesDialog on open for quick replacement.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,